css/style.css
/* general */
body {
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
  overflow: hidden;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

h3,
h5,
p,
button,
input {
  margin: 0;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 600;
}


/* navbar */

.top-nav {
  position: absolute;
  top: 0;
  width: 95%;
  height: 75px;
  left: 50%;
  transform: translate(-50%, 0);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1;
}

.top-nav-right {
  display: flex;
  align-items: center;
}

.nav-menu-wrapper {
  overflow-x: hidden;
}

#nav-menu {
  transform: translateX(125%);
  visibility: hidden;
  transition: 0.3s all ease-out;
}

.nav-link {
  color: #E5EBF3;
  font-size: 14px;
  line-height: 17px;
  background: none;
  border: none;
  margin-right: 15px;
  cursor: pointer;
}

#burger-icon {
  width: 40px;
  height: 45px;
  position: relative;
  top: 14px;
  margin-left: 15px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}

#burger-icon span {
  display: block;
  position: absolute;
  height: 3px;
  width: 60%;
  /* background: linear-gradient(257.92deg, #F04829 5.36%, #FAAF40 55.62%, #2D97FC 89.97%); */
  border-radius: 9px;
  opacity: 1;
  right: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

#burger-icon span:nth-child(1) {
  top: 0px;
  background: #2D97FC;
}

#burger-icon span:nth-child(2) {
  top: 8px;
  background: #FAAF40;
  ;
}

#burger-icon span:nth-child(3) {
  top: 16px;
  background: #F04829;
}

#burger-icon.open span:nth-child(1) {
  top: 8px;
  -webkit-transform: rotate(135deg);
  -moz-transform: rotate(135deg);
  -o-transform: rotate(135deg);
  transform: rotate(135deg);
  background: #D2D2D2;
}

#burger-icon.open span:nth-child(2) {
  opacity: 0;
  left: 160px;
}

#burger-icon.open span:nth-child(3) {
  top: 8px;
  -webkit-transform: rotate(-135deg);
  -moz-transform: rotate(-135deg);
  -o-transform: rotate(-135deg);
  transform: rotate(-135deg);
  background: #D2D2D2
}

.width-unset {
  width: unset !important;
}

.video-mask {
  height: 100%;
}

video {
  /* used for border-radius */
  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
  border-radius: 12px;
}

.remove-on-desktop {
  display: none;
}


.container {
  position: relative;
  width: 100%;
  overflow: hidden;
  transition: 1s cubic-bezier(0.5, 0, 0.5, 1);

}

.section {
  width: 100%;
  height: 100vh;
  background-color: #0F0F18;
  display: flex;
  align-items: center;
}

.page-container {
  display: flex;
  width: 80%;
  height: 80%;
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
}

.page-container-left,
.page-container-right {
  width: 50%;
  z-index: 1;
}

.page-container-right video {
  float: right;
}

.page-heading {
  font-size: 48px;
  line-height: 59px;
  color: #DDE5F2;
}

.page-subheading {
  font-size: 32px;
  line-height: 39px;
  color: #E5EBF3;
  margin: 20px 0;
}

.page-desc {
  font-size: 24px;
  line-height: 29px;
  color: #E5EBF3;
}

.gradient {
  background: linear-gradient(257.92deg, #F04829 5.36%, #FAAF40 55.62%, #2D97FC 89.97%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  color: transparent;
}

.btn {
  background: #151619;
  border: 1.63441px solid #F3F6FB;
  box-sizing: border-box;
  border-radius: 100px;
  color: white;
  margin: 20px 0;
  padding: 15px 40px;
  font-family: Montserrat;
  cursor: pointer;
}

/* .btn-gradient {
  border: 2px solid;
  border-image-slice: 1;
  border-width: 2px;
  border-radius: 10px;
  border-image-source: linear-gradient(257.92deg, #F04829 5.36%, #FAAF40 55.62%, #2D97FC 89.97%);
} */

.btn-gradient-wrapper {
  width: 130px;
  padding: 1px 1px;
  border-radius: 100px;
  position: relative;
  background: linear-gradient(257.92deg, #F04829 5.36%, #FAAF40 55.62%, #2D97FC 89.97%);
  z-index: 1;
  /* padding: 3px; */
}

.btn-gradient-wrapper .btn {
  border: unset;
  margin: 0;
}

/* page 1 */


/* page 2 */
.page-2-geo {
  position: absolute;
  right: 0;
}

.page-2-video {
  transform: translateX(-85px);
}

/* page 3 */
.page-3-geo {
  position: absolute;
  left: 0;
}

/* page 4 */
.page-4-geo {
  position: absolute;
  right: 0;
}

.page-5-geo {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
}

.page-5 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.page-5-video {
  position: relative;
  z-index: 1;
  left: 50%;
  transform: translate(-50%, -20px);
}

.subscribe-text {
  color: #E5EBF370;
  font-size: 48px;
  line-height: 59px;
}

.email-form {
  display: flex;
  justify-content: space-between;
  width: 70%;
  margin: 30px auto;
  padding: 20px;
  border: 1px solid #47474750;
}

.email-field {
  width: 500px;
  background: transparent;
  border: none;
  text-decoration: none;
  color: #686868;
  font-size: 21px;
  line-height: 26px;
}

.email-field:focus {
  outline-width: 0;

}

.email-form::placeholder {
  color: #686868;
  font-size: 21px;
  line-height: 26px;
}

/* page 5 */

.footer {
  position: absolute;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 95%;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 0);
  height: 75px;
}

.footer-left {
  display: flex;
  align-items: center;
}

.copyright {
  font-size: 14px;
  line-height: 21px;
  transform: translateY(2px);
  margin-left: 30px;
  color: #474747;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
}


/* media queries for mobile */

@media only screen and (max-width: 1100px) {

  body,
  .container {
    overflow-y: scroll !important;
    overscroll-behavior-y: unset !important;
  }

  .section {
    height: unset;
  }

  .remove-on-mobile {
    display: none;
  }

  .remove-on-desktop {
    display: block !important;
  }

  .page-container {
    flex-direction: column;
    width: 85%;
  }

  .page-container-left,
  .page-container-right {
    width: 100%;
  }

  .page-heading {
    font-size: 36px;
    line-height: 44px;
  }

  .page-subheading {
    font-size: 32px;
    line-height: 39px;
    color: #E5EBF3;
    margin: 20px 0;
  }

  .page-desc {
    font-size: 24px;
    line-height: 29px;
    color: #E5EBF3;
  }

  .video {
    width: 100% !important;
    height: 100% !important;
    padding: 0 40px;
  }

  /* navbar */

  .top-nav {
    margin-bottom: 40px;
    width: 90%;
  }

  .top-nav-right,
  .top-nav-left {
    width: 50%;
  }

  .top-nav-right .btn {
    padding: 8px 25px;
  }

  #burger-icon {
    margin-left: 0;
  }

  /* page 1 */
  .page-1 .page-heading:nth-child(1) {
    padding-top: 140px;
  }

  .page-1 .page-heading:nth-child(2) {
    padding-bottom: 40px;
  }

  .page-1 .page-container-right {
    display: flex;
    justify-content: center;
  }

  /* page 2 */
  .page-2 .btn {
    margin: 70px 0px;
  }

  .page-2-geo {
    right: -44px;
    transform: translate(22%, 29%);
  }

  .page-2-video {
    transform: unset;
    width: 100% !important;
    padding-bottom: 100px;
  }

  /* page-3 */
  .page-3 .btn {
    margin: 70px 0px;
  }

  .page-3 .page-container {
    flex-direction: column-reverse;
  }

  .page-3-geo {
    transform: translate(-20%, 67%);
  }

  .page-3-video {
    width: 100% !important;
    padding-bottom: 80px;
    ;
  }

  /* page-4 */
  .page-4-video {
    width: 100% !important;
    padding: 80px 0;
  }

  .page-4-geo {
    transform: translate(32%, 20%);
  }

  /* page-5 */
  .page-5 .page-heading {
    text-align: center;
  }

  .page-5-geo {
    transform: translate(-50%, -126%);
  }

  .page-5-video {
    width: 80% !important;
    padding: 20px;
  }

  .subscribe-text {
    font-size: 32px;
    line-height: 39px;
    text-align: center;
    padding: 20px;
  }

  .email-form {
    font-size: 16px;
    line-height: 20px;
    margin: 60px auto;
    width: 85%;
    padding: 10px;
  }

  .email-field {
    font-size: 12px;
    line-height: 20px;
  }

  .email-form .btn {
    padding: 8px 25px;
  }


  .footer {
    flex-direction: column;
    transform: unset;
    position: unset;
    width: 85%;
    height: unset;
    align-items: flex-start;
  }

  .footer-left,
  .footer-right {
    margin-bottom: 20px;
  }

  .footer-right .nav-link {
    padding: 0;
  }

  .footer-right {
    width: 70%;
    padding-top: 10px;
  }

  .copyright {
    font-size: 14px;
    line-height: 21px;
    margin: 20px 0;
    text-align: left;
  }
}

